--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
 			<div class="social-media">
 				<!-- <a href="#"><i class="bx bxl-facebook"></i></a> -->
-				<a href="#"><i class="bx bxl-twitter"></i></a>
+				<a href="https://twitter.com/oblair_"><i class="bx bxl-twitter"></i></a>
 				<!-- <a href="#"><i class="bx bxl-instagram-alt"></i></a> -->
 				<a href="#"><i class="bx bxl-linkedin"></i></a>
 			</div>
 
 			<div class="buto">
 				<a href="#" class="btn">Blair's Resume</a>
-				<a href="#" class="btn">Blair's Github</a>
+				<a href="https://github.com/eminentmmark" class="btn">Blair's Github</a>
 			</div>
 
 		</div>
