added abilities on the service page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<h3>Shalom, I am</h3>
 			<h1>Oyugi Blair</h1>
 			<h3> And I'm a <span class="multiple-text" href="#services"></span></h3>
-			<p>A quick learner with relevant resources and tools for research and analysis, and, from esteemed established mentors and managers, every crisis I encounter augments me to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in content and software creation. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of commitment to available tasks.</p>
+			<p>A quick learner with relevant resources and tools for research and analysis, and, in concert esteemed established mentors and managers, every crisis I encounter augments me to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in content and software creation. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of commitment to available tasks.</p>
 			<div class="social-media">
 				<!-- <a href="#"><i class="bx bxl-facebook"></i></a> -->
 				<a href="https://twitter.com/oblair_"><i class="bx bxl-twitter"></i></a>
@@ -268,7 +268,7 @@
 
 		<div class="brands-col">
 			<div class="ewan-logo">
-				<a href="ewan/index.html"><img href="ewan/index.html" src="images/ewan3.svg"></a>
+				<a href="ewan/index.html"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
 				<p>visit <span> Ewan Electric</span></p>
 			</div>
 		
