--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
 		<nav class="navbar">
 			<a href="#cybersec" class="active">Cyber Security</a>
 			<a href="#digital">Digital Marketing</a>
-			<a href="#frontend">Developer</a>
+			<a href="#developer">Developer</a>
 			<a href="#network">Network Engineering</a>
 			<a href="#web">Website Administration</a>
 			<a href="#forum">Publications & Forums</a>
@@ -41,56 +41,81 @@
 	</header>
 
 <!-- Services -->
-<div class="services2-text">
 
-<!-- Title -->
-	<div class="services2" id="services">
-		<h1><span>oblair+ </span> Services</h1>
-	</div>
+	<section class="">
+		<div class="services2" id="services">
+			<h1><span>oblair+ </span> Services</h1>
+		</div>
+	</section>
 
-		<!-- cybersec -->
-		<section class="cybersec" id="cybersec">
-			<h2>Cyber <span>Security</span></h2>
-			<p>So they all got excited about this, and I
+	<section class="services3" id="services3">
+
+		<div class="services3-container">
+			<div class="services3-box">
+				<i class="bx bx-code-alt"></i>
+				<h2>Cyber <span>Security</span></h2>
+				<p><span>Firewalls</span> configuration</p>
+				<p>Data protection and <span>privacy</span></p>
+				<p>Service enumeration for <span>vulenarability testing</span></p>
+				<p><span>Endpoint security</span> for your devices</p>
+				<p>Mitigate SQL injection attacks via <span>SSL/TSL certificates</span> and <span>API keys</span> to archieve API security</p>
+				<p><span>Digital evidence</span> aquisition and preservation to maintain its integrity</p>
+				<p>Malware anaysis and reverse engineering via <span>sandboxes</span></p>
+			</div>
+			
+			<div class="services3-box">
+				<i class="bx bx-code-alt"></i>
+				<h2><span>Data</span> Visualization</h2>
+				<p>Combing through your meta data via data analysis with: <span>Qlik view</span>, <span>R</span>, <span>python</span>, <span>MySQL</span></p>
+				<p>Data manipulation and translation</p>
+			</div>
+		
+			<div class="services3-box">
+				<i class="bx bx-code-alt"></i>
+				<h2>Digital <span>Marketing</span></h2>
+				<p><span>Adobe illustrator</span>, <span>Adobe photoshop</span> and <span>Canva</span> command for content development (logo design and picture editing)</p>
+				<p>Social media manangment</p>
+				<p>Product and Stage photography</p>
+				<p>Web designing and development via <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span></p>
+			</div>
+			
+			<div class="services3-box">
+				<i class="bx bx-code-alt"></i>
+				<h2><span>D</span>evel<span>ope</span>r</h2>
+				<p><span>Django framework</span> web development, <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span></p>
+				<p>Software design and implementation</p>
+			</div>
+
+			<div class="services3-box">
+				<i class="bx bx-code-alt"></i>
+				<h2><span>Network</span> Engineering</h2>
+				<p>Routing and switching</p>
+				<p>Network <span>subnetting</span> and segmentation</p>
+				<p>Network <span>topologies</span> design</p>
+				<p>OSI/TCP model <span>protocols</span> congifuration</p>
+				<p><span>Remote</span> network connections</p>
+				<p>Linux <span>terminal</span> command</p>
+				<p>Data <span>backups</span></p>
+				<p>Network monitoring and administration</p>
+			</div>
+			
+			<div class="services3-box">
+				<i class="bx bx-code-alt"></i>
+				<h2><span>Web</span> Administration</h2>
+				<p>Website monitoring and administration</p>
+				<p><span>Search Engine Optimization</span> command</p>
+				<p><span>Wordpress</span> command</p>
+			</div>
+			
+			<div class="services3-box">
+				<i class="bx bx-code-alt"></i>
+				<h2>Publications <span>& Forums</span></h2>
+				<p>So they all got excited about this, and I
 				predicted a couple of other things.</p>
-		</section>
+			</div>
+		</div>
 
-		<!-- digital -->
-		<section class="digital" id="digital">
-			<h2>Digital <span>Marketing</span></h2>
-			<p>So they all got excited about this, and I
-				predicted a couple of other things.</p>
-		</section>
-
-		<!-- frontend -->
-		<section class="frontend" id="frontend">
-			<h2>Developer</h2>
-			<p>So they all got excited about this, and I
-				predicted a couple of other things.</p>
-		</section>
-
-		<!-- network -->
-		<section class="network" id="network">
-			<h2><span>Network</span> Engineering</h2>
-			<p>So they all got excited about this, and I
-				predicted a couple of other things.</p>
-		</section>
-
-		<!-- web -->
-		<section class="web" id="web">
-			<h2><span>Web</span> Administration</h2>
-			<p>So they all got excited about this, and I
-				predicted a couple of other things.</p>
-		</section>
-
-		<!-- forum -->
-		<section class="forum" id="forum">
-			<h2>Publications <span>& Forums</span></h2>
-			<p>So they all got excited about this, and I
-				predicted a couple of other things.</p>
-		</section>
-
-</div>
+	</section>
 
 <!-- contact section design -->
 	<section class="contact" id="contact">
@@ -128,25 +153,26 @@
 				<textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
 				<input type="submit" value="Send Message" class="btn">
 			</form>
-
-			<div class="brands">
-				<div class="ewan-logo">
-					<a href="#"><img href="#" src="images/ewan3.svg"></a>
-				</div>
-				<div>
-					<p>visit <span> Ewan Electric</span></p>
-				</div>
-
-				<div>
-					<a href="#"><img href="#" src="images/ait2logo.png"></a>
-				</div>
-				<div>
-					<p>visit <span> Afrika in Time</span></p>
-				</div>
-			</div>
-
 		</div>
 
+	</section>
+
+<!--  brand design  -->
+	<section id="brands" class="brands">
+
+		<p>Brands oblair Has <span>Partnered</span> With</p>
+
+		<div class="brands-col">
+			<div class="ewan-logo">
+				<a href="ewan/index.html"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
+				<p>visit <span> Ewan Electric</span></p>
+			</div>
+		
+			<div>
+				<a href="afrika_in_time/index.html"><img href="afrika_in_time/index.html" src="images/ait2logo.png"></a>
+				<p>visit <span> Afrika in Time</span></p>
+			</div>
+		</div>
 	</section>
 
 
