added the resume and data in the service page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</div>
 
 			<div class="buto">
-				<a href="#" class="btn">Blair's Resume</a>
+				<a href="./doc/ICT TECHNOLOGIST RESUME.pdf" class="btn">Blair's Resume</a>
 				<a href="https://github.com/eminentmmark" class="btn">Blair's Github</a>
 			</div>
 
@@ -228,23 +228,21 @@
 		<div class="row">
 
 			<div class="contact-col">
-				<div>
 				<i class="fa fa-phone"></i>
-					<span>
-						<h5>+254 703846352</h5>
-						<p>Call <span>Blair</span></p>
-					</span>
-				</div>
-				<div>
-					<i class="fa fa-envelope"></i>
-					<span>
-						<h5>oblairmark@gmail.com</h5>
-						<p>Email Blair your query<br>for <span>solutions</span></p>
-					</span>
-				</div>
+				<span>
+					<h5>+254 703846352</h5>
+					<p>Call <span>Blair</span></p>
+				</span>
+			</div>
+			<div class="contact-col">
+				<i class="fa fa-envelope"></i>
+				<span>
+					<h5>oblairmark@gmail.com</h5>
+					<p>Email Blair your query for <span>solutions</span></p>
+				</span>
 			</div>
 
-			<form action="#">
+			<!-- <form action="#">
 				<div class="input-box">
 					<input type="text" placeholder="Full name">
 					<input type="email" placeholder="Email Address">
@@ -256,7 +254,7 @@
 				</div>
 				<textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
 				<input type="submit" value="Send Message" class="btn">
-			</form>
+			</form> -->
 		</div>
 
 	</section>
