--- a/services.html
+++ b/services.html
@@ -73,7 +73,7 @@
 			<div class="services3-box">
 				<i class="bx bx-code-alt"></i>
 				<h2>Digital <span>Marketing</span></h2>
-				<p><span>Adobe illustrator</span>, <span>Adobe photoshop</span> and <span>Canva</span> command for content development (logo design and picture editing)</p>
+				<p><span>Adobe illustrator</span>, <span>Adobe photoshop</span> and <span>Canva</span> command for content development (logo design and picture editing - Graphics designing)</p>
 				<p>Social media manangment</p>
 				<p>Product and Stage photography</p>
 				<p>Web designing and development via <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span></p>
@@ -97,6 +97,7 @@
 				<p>Linux <span>terminal</span> command</p>
 				<p>Data <span>backups</span></p>
 				<p>Network monitoring and administration</p>
+				<p>Systems <span>maintenance</span></p>
 			</div>
 			
 			<div class="services3-box">
@@ -124,23 +125,21 @@
 		<div class="row">
 
 			<div class="contact-col">
-				<div>
 				<i class="fa fa-phone"></i>
-					<span>
-						<h5>+254 703846352</h5>
-						<p>Call <span>Blair</span></p>
-					</span>
-				</div>
-				<div>
-					<i class="fa fa-envelope"></i>
-					<span>
-						<h5>oblairmark@gmail.com</h5>
-						<p>Email Blair your query<br>for <span>solutions</span></p>
-					</span>
-				</div>
+				<span>
+					<h5>+254 703846352</h5>
+					<p>Call <span>Blair</span></p>
+				</span>
+			</div>
+			<div class="contact-col">
+				<i class="fa fa-envelope"></i>
+				<span>
+					<h5>oblairmark@gmail.com</h5>
+					<p>Email Blair your query for <span>solutions</span></p>
+				</span>
 			</div>
 
-			<form action="#">
+			<!-- <form action="#">
 				<div class="input-box">
 					<input type="text" placeholder="Full name">
 					<input type="email" placeholder="Email Address">
@@ -152,7 +151,7 @@
 				</div>
 				<textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
 				<input type="submit" value="Send Message" class="btn">
-			</form>
+			</form> -->
 		</div>
 
 	</section>
