--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<!-- <a href="#"><i class="bx bxl-facebook"></i></a> -->
 				<a href="https://twitter.com/oblair_"><i class="bx bxl-twitter"></i></a>
 				<!-- <a href="#"><i class="bx bxl-instagram-alt"></i></a> -->
-				<a href="#"><i class="bx bxl-linkedin"></i></a>
+				<a href="https://www.linkedin.com/in/blairoyugi/"><i class="bx bxl-linkedin"></i></a>
 			</div>
 
 			<div class="buto">
@@ -266,12 +266,12 @@
 
 		<div class="brands-col">
 			<div class="ewan-logo">
-				<a href="ewan/index.html"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
+				<a href="https://eminentmmark.github.io/ewan/"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
 				<p>visit <span> Ewan Electric</span></p>
 			</div>
 		
 			<div>
-				<a href="afrika_in_time/index.html"><img href="afrika_in_time/index.html" src="images/ait2logo.png"></a>
+				<a href="https://eminentmmark.github.io/afrika_in_time/"><img href="https://eminentmmark.github.io/afrika_in_time/" src="images/ait2logo.png"></a>
 				<p>visit <span> Afrika in Time</span></p>
 			</div>
 		</div>
