added pic background on the service page

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<div class="services-box">
 				<i class="bx bx-code-alt"></i>
 				<h3>Cyber Security</h3>
-				<p>Like malware and ransomware, cyber exploitors; hackers, are being groomed by the day to take advantage of your vulnerable sysytems...</p>
+				<p>Like malware and ransomware, cyber exploitors; hackers, are being groomed by the day to take advantage of your <span>vulnerable sysytems</span>...</p>
 
 				<a href="services.html" class="btn">Read More</a>
 			</div>
@@ -104,7 +104,7 @@
 			<div class="services-box">
 				<i class="bx bx-bar-chart-alt"></i>
 				<h3>Data Visualization</h3>
-				<p>For informed decision making, analysed data is crucial not only for your derpartments still ur oganization's robustness...</p>
+				<p>For informed <span>decision making</span>, analysed data is crucial not only for your derpartments still ur oganization's robustness...</p>
 
 				<a href="services.html" class="btn">Read More</a>
 			</div>
@@ -139,8 +139,7 @@
 			<div class="services-box">
 				<i class="bx bxs-paint"></i>
 				<h3>Webmaster</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt<br>ut labore et dolore magna aliqua.</p>
+				<p>Let an <span>elegant</span> wesite not only <span>showcase</span> your offering and contact details to your audience, still, manage your customer relatioships...</p>
 
 				<a href="services.html" class="btn">Read More</a>
 			</div>
@@ -148,8 +147,7 @@
 			<div class="services-box">
 				<i class="bx bx-bar-chart-alt"></i>
 				<h3>Publications & Forums</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt<br>ut labore et dolore magna aliqua.</p>
+				<p>Because <span>language</span> is the crux of all persuasion in communication be it writing or otherwise, I will <span>persuade</span> your readers not only to keep returning to your site but also refer you</p>
 
 				<a href="services.html" class="btn">Read More</a>
 			</div>
