--- a/services.html
+++ b/services.html
@@ -30,23 +30,28 @@
 		<i class="bx bx-menu" id="menu-icon"></i>
 
 		<nav class="navbar">
-			<a href="#cybersec" class="active">Cyber Security</a>
+			<a href="#services3" class="active">Services</a>
+			<!-- <a href="#cybersec" class="active">Cyber Security</a>
 			<a href="#digital">Digital Marketing</a>
 			<a href="#developer">Developer</a>
 			<a href="#network">Network Engineering</a>
 			<a href="#web">Website Administration</a>
-			<a href="#forum">Publications & Forums</a>
+			<a href="#forum">Publications & Forums</a> -->
 			<a href="#contact">Contact</a>
 		</nav>
 	</header>
 
-<!-- Services -->
+<!-- title -->
 
-	<section class="">
-		<div class="services2" id="services">
+<div class="background">
+
+	<section class="" id="services">
+		<div class="services2">
 			<h1><span>oblair+ </span> Services</h1>
 		</div>
 	</section>
+
+<!-- Services -->
 
 	<section class="services3" id="services3">
 
@@ -115,7 +120,6 @@
 				predicted a couple of other things.</p>
 			</div>
 		</div>
-
 	</section>
 
 <!-- contact section design -->
@@ -174,6 +178,8 @@
 		</div>
 	</section>
 
+</div>
+
 
 <!-- footer design -->
 <footer class="footer">
@@ -182,7 +188,7 @@
 	</div>
 
 	<div class="footer-iconTop">
-		<a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+		<a href="#services"><i class="bx bx-up-arrow-alt"></i></a>
 	</div>
 </footer>
 
