changed service page to skill page and added a service section in the skill page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <!-- header design -->
 	<header class="header">
-		<a href="services.html" class="logo">o b l a i r <span>+</span></a>
+		<a href="skills.html" class="logo">o b l a i r <span>+</span></a>
 
 		<!-- icons -->
 		<i class="bx bx-menu" id="menu-icon"></i>
@@ -32,7 +32,7 @@
 		<nav class="navbar">
 			<a href="#home" class="active">Home</a>
 			<a href="#about">About</a>
-			<a href="#services">Services</a>
+			<a href="#skills">Skills</a>
 			<a href="#portfolio">Portfolio</a>
 			<a href="#contact">Contact</a>
 		</nav>
@@ -44,7 +44,7 @@
 			<h3>Shalom, I am</h3>
 			<h1>Oyugi Blair</h1>
 			<h3> And I'm a <span class="multiple-text" href="#services"></span></h3>
-			<p>A quick learner with relevant resources and tools for research and analysis, and, in concert esteemed established mentors and managers, every crisis I encounter augments me to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in content and software creation. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of commitment to available tasks.</p>
+			<p>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in content and software creation. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of commitment to available tasks.</p>
 			<div class="social-media">
 				<!-- <a href="#"><i class="bx bxl-facebook"></i></a> -->
 				<a href="https://twitter.com/oblair_"><i class="bx bxl-twitter"></i></a>
@@ -62,7 +62,17 @@
 		<div class="home-img">
 			<img src="images/creativeO.jpg" alt="">
 		</div>
+
+<!-- services -->
+			<!-- <section class="services" id="services">
+				<h2><span>Serv</span>ic<span>e</span>s</h2>
+
+				<a href="skills.html" class="btn">Read More</a>
+			</section> -->
+
 	</section>
+
+
 
 <!-- about section design -->
 	<section class="about" id="about">
@@ -73,83 +83,76 @@
 		<div class="about-content">
 			<h2 class="heading">About <span>Oyugi Blair</span></h2>
 			<h3> <span class="multiple-text" href="#services"></span></h3>
-			<p>I am  a Kenyan developer and cybersecurity practitioner<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			<p>I am  a Kenyan developer and cybersecurity practitioner<br>A quick learner with relevant resources and tools for research and analysis, and, in concert esteemed established mentors and managers, every crisis I encounter augments me to grow anti-fragile.<br>lorem iI am  a Kenyan developer and cybersecurity practitioner<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br>lorem iI am  a Kenyan developer and cybersecurity practitioner<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur.</p>
+			consequat.</p>
 
-			<a href="#" class="btn">Read More</a>
+			<!-- <a href="#" class="btn">Read More</a> -->
 		</div>
 	</section>
 
-<!-- services section design -->
-	<section class="services" id="services">
-		<h2 class="heading"><span>Serv</span>ic<span>e</span>s</h2>
+<!-- skills section design -->
+	<section class="skills" id="skills">
+		<h2 class="heading">Blair's <span>Skill</span> S<span>et</span></h2>
 
-		<div class="services-container">
-			<div class="services-box">
+		<div class="skills-container">
+			<div class="skills-box">
 				<i class="bx bx-code-alt"></i>
 				<h3>Cyber Security</h3>
 				<p>Like malware and ransomware, cyber exploitors; hackers, are being groomed by the day to take advantage of your <span>vulnerable sysytems</span>...</p>
 
-				<a href="services.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">Read More</a>
 			</div>
 			
-			<div class="services-box">
+			<div class="skills-box">
 				<i class="bx bx-bar-chart-alt"></i>
 				<h3>Data Visualization</h3>
 				<p>For informed <span>decision making</span>, analysed data is crucial not only for your derpartments still ur oganization's robustness...</p>
 
-				<a href="services.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">Read More</a>
 			</div>
 		
-			<div class="services-box">
+			<div class="skills-box">
 				<i class="bx bxs-paint"></i>
 				<h3>Digital Marketing</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt<br>ut labore et dolore magna aliqua.</p>
 
-				<a href="services.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">Read More</a>
 			</div>
 
-			<div class="services-box">
+			<div class="skills-box">
 				<i class="bx bx-bar-chart-alt"></i>
 				<h3>Frontend Developer</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt<br>ut labore et dolore magna aliqua.</p>
 
-				<a href="services.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">Read More</a>
 			</div>
 
-			<div class="services-box">
+			<div class="skills-box">
 				<i class="bx bx-code-alt"></i>
 				<h3>Network Engineering</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt<br>ut labore et dolore magna aliqua.</p>
 
-				<a href="services.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">Read More</a>
 			</div>
 		
-			<div class="services-box">
+			<div class="skills-box">
 				<i class="bx bxs-paint"></i>
 				<h3>Webmaster</h3>
 				<p>Let an <span>elegant</span> wesite not only <span>showcase</span> your offering and contact details to your audience, still, manage your customer relatioships...</p>
 
-				<a href="services.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">Read More</a>
 			</div>
 
-			<div class="services-box">
+			<div class="skills-box">
 				<i class="bx bx-bar-chart-alt"></i>
 				<h3>Publications & Forums</h3>
 				<p>Because <span>language</span> is the crux of all persuasion in communication be it writing or otherwise, I will <span>persuade</span> your readers not only to keep returning to your site but also refer you</p>
 
-				<a href="services.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">Read More</a>
 			</div>
 		</div>
 	</section>
